@@ -8,6 +8,7 @@ Kayen: Implemented SE_StrikeThough (Was incorrectly defined as implemented previ
 Kayen: Update SE_Taunt - Limit value if present will now add instant hate.
 Kayen: Implemented SE_MassGroupBuff - Allows next group buff cast to be a MGB (AA now uses this)
 Kayen: Implemented SE_IllusionOther - Allows next Illusion buff (self only) cast to be cast on target. (AA now uses this)
+Kayen: Update SE_AETaunt - Base value will now determine AE taunt range (This will not result in any change to currently used spells).
 
 Required SQL: utils/sql/git/required/2014_06_25_AA_Update.sql
 
